--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <h2>Get In Touch</h2>
       <h3>Are you, too, interested to read my works?</h3>
       <p>And probably you could share yours too and we can move towards building a clique <3.</p>
-      <a class="btn" href="mailto:riyaaggarwal19@cse.iiitp.ac.in">CONTACT ME</a>
+      <a class="btn" href="mailto:writingqoats@gmail.com">CONTACT ME</a>
     </div>
   </div>
 
