changed footer - added twitterand removed author's page

--- a/index.html
+++ b/index.html
@@ -49,8 +49,7 @@
 
   <div class="bottom-container">
     <a class="footer-link" href="https://www.linkedin.com/in/riya-aggarwal-5877951ab/">LinkedIn</a>
-    <a class="footer-link" href="https://www.instagram.com/riyya_aggarwal/">Insta</a>
-    <a class="footer-link" href="https://eclecticiiitp.in/author/Riya+Aggarwal">Author'sPage</a>
+    <a class="footer-link" href="https://twitter.com/RiyyaAggarwal">Twitter</a>
     <p>© 2021 Riya Aggarwal.</p>
   </div>
 
