--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <div class="contact-me">
       <h2>Get In Touch</h2>
       <h3>Are you, too, interested to read my works?</h3>
-      <p>And probably you could share yours too and we can move towards building a clique <3.</p>
+      <p>And probably you could share yours too and we can move towards building a clique ❤.</p>
       <a class="btn" href="mailto:writingqoats@gmail.com">CONTACT ME</a>
     </div>
   </div>
